--- a/test/dist.config
+++ b/test/dist.config
@@ -1,3 +1,5 @@
 {elixir_path, << "/usr/local/lib/elixir/lib/" >>}.
 {server_path, << "/root/schoolhub_server" >>}.
 {client_path, << "/root/schoolhub_client" >>}.
+
+{client_configs, [<< "test_dist.exs" >>]}.
