fix mocking client Romeo

--- a/test/dist.config
+++ b/test/dist.config
@@ -2,4 +2,5 @@
 {server_path, << "/root/schoolhub_server" >>}.
 {client_path, << "/root/schoolhub_client" >>}.
 
+{server_configs, [<< "config.exs" >>]}.
 {client_configs, [<< "test_dist.exs" >>]}.
