local common test configs are configurable now

--- a/test/local.config
+++ b/test/local.config
@@ -1,3 +1,6 @@
 {elixir_path, << "/usr/lib/elixir/lib/" >>}.
 {server_path, << "../../../schoolhub_server" >>}.
 {client_path, << "../../../schoolhub_client" >>}.
+
+{server_configs, [<< "config.exs" >>, << "test.exs" >>]}.
+{client_configs, [<< "config.exs" >>, << "test.exs" >>]}.
