first working draft of mongooseim inbox

--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -709,7 +709,8 @@
 % ]},
 
   {mod_adhoc, []},
-  
+  {mod_inbox, []},
+
   {mod_disco, [{users_can_see_hidden_services, false}]},
   {mod_commands, []},
   {mod_muc_commands, []},
