XMPP message archive with skeleton server to access

--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -790,7 +790,7 @@
 {host, "vjud.@HOST@"}
 ]},
   {mod_bosh, []},
-  {mod_carboncopy, []}
+  {mod_carboncopy, []},
 
   %%
   %% Message Archive Management (MAM, XEP-0313) for registered users and
@@ -851,12 +851,12 @@
 % ]},
 
   %% Only archives for c2c messages, good performance.
-% {mod_mam_meta, [
-%   {backend, rdbms},
-%   {pm, [
-%     {user_prefs_store, mnesia}
-%   ]}
-% ]},
+  {mod_mam_meta, [
+    {backend, rdbms},
+    {pm, [
+      {user_prefs_store, mnesia}
+    ]}
+  ]}
 
   %% Basic configuration for c2c messages, bad performance, easy to debug.
 % {mod_mam_meta, [
