--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -161,7 +161,7 @@
   { 5285, ejabberd_cowboy, [
         {num_acceptors, 10},
         {transport_options, [{max_connections, 1024}]},
-        {ssl, [{certfile, "priv/ssl/fake_cert.pem"}, {keyfile, "priv/ssl/fake_key.pem"}, {password, ""}]},
+        {ssl, [{certfile, "priv/ssl/schoolhub.crt"}, {keyfile, "priv/ssl/schoolhub.key"}, {password, ""}]},
         {modules, [
             {"_", "/http-bind", mod_bosh},
             {"_", "/ws-xmpp", mod_websockets, [
@@ -191,7 +191,7 @@
       {num_acceptors, 10},
       {transport_options, [{max_connections, 1024}]},
       {protocol_options, [{compress, true}]},
-      {ssl, [{certfile, "priv/ssl/fake_cert.pem"}, {keyfile, "priv/ssl/fake_key.pem"}, {password, ""}]},
+      {ssl, [{certfile, "priv/ssl/schoolhub.crt"}, {keyfile, "priv/ssl/schoolhub.key"}, {password, ""}]},
       {modules, [
           {"_", "/api/sse", lasse_handler, [mongoose_client_api_sse]},
           {"_", "/api/messages/[:with]", mongoose_client_api_messages, []},
@@ -225,7 +225,7 @@
 			%% certificate, specify the full path to the
 			%% file and uncomment this line:
 			%%
-                        {certfile, "priv/ssl/fake_server.pem"}, starttls,
+                        {certfile, "priv/ssl/schoolhub.pem"}, starttls,
                         
                         %%{zlib, 10000},
 			%% https://www.openssl.org/docs/apps/ciphers.html#CIPHER_STRINGS
@@ -280,7 +280,7 @@
 %%
 %% s2s_certfile: Specify a certificate file.
 %%
-{s2s_certfile, "priv/ssl/fake_server.pem"}.
+{s2s_certfile, "priv/ssl/schoolhub.pem"}.
 
 %% https://www.openssl.org/docs/apps/ciphers.html#CIPHER_STRINGS
 %% {s2s_ciphers, "TLSv1.2:TLSv1.3"}.
@@ -435,8 +435,8 @@
   {rdbms, global, default, [{workers, 10}],
    [{server, {pgsql, "10.3.0.3", 5432, "schoolhub", "schoolhub", "schoolhub",
 	      [{ssl, true}, 
-	       {ssl_opts, [{verify, verify_peer}, 
-			   {cacertfile, "priv/ssl/cacert.pem"}]}]
+	       {ssl_opts, [{verify, verify_none}, 
+			   {cacertfile, "priv/ssl/schoolhub_cacert.crt"}]}]
 	     }}]}
 ]}.
 
