--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,11 +79,13 @@ services:
     tty: true
     volumes:
       - ./schoolhub_server:/root/schoolhub_server
-    env_file: erlang_cookie.env
+    env_file:
+      - erlang_cookie.env
+    environment:
+      - SSL_DIST_OPTFILE=priv/ssl_dist_optfile.conf
+      - NAME=server@10.3.1.1
     working_dir: /root/schoolhub_server
-    command: bash -c "mix local.hex --force
-             && mix do deps.get, compile
-             && iex --name server@10.3.1.1 --cookie $${ERLANG_COOKIE} -S mix"
+    command: ./launch.sh
 
   schoolhub_server2:
     container_name: schoolhub_server2
@@ -103,11 +105,13 @@ services:
     tty: true
     volumes:
       - ./schoolhub_server:/root/schoolhub_server
-    env_file: erlang_cookie.env
+    env_file:
+      - erlang_cookie.env
+    environment:
+      - SSL_DIST_OPTFILE=priv/ssl_dist_optfile.conf
+      - NAME=server@10.3.1.2
     working_dir: /root/schoolhub_server
-    command: bash -c "mix local.hex --force
-             && mix do deps.get, compile
-             && iex --name server@10.3.1.2 --cookie $${ERLANG_COOKIE} -S mix"
+    command: ./launch.sh
 
   schoolhub_server3:
     container_name: schoolhub_server3
@@ -127,11 +131,13 @@ services:
     tty: true
     volumes:
       - ./schoolhub_server:/root/schoolhub_server
-    env_file: erlang_cookie.env
+    env_file:
+      - erlang_cookie.env
+    environment:
+      - SSL_DIST_OPTFILE=priv/ssl_dist_optfile.conf
+      - NAME=server@10.3.1.3
     working_dir: /root/schoolhub_server
-    command: bash -c "mix local.hex --force
-             && mix do deps.get, compile
-             && iex --name server@10.3.1.3 --cookie $${ERLANG_COOKIE} -S mix"
+    command: ./launch.sh
     
 
   dist_tester_server:
