fix distributed server ssl

--- a/schoolhub_server/priv/ssl_dist_optfile.conf
+++ b/schoolhub_server/priv/ssl_dist_optfile.conf
@@ -1,10 +1,8 @@
 [{server,
   [{certfile, "priv/cert/schoolhub.crt"},
    {keyfile, "priv/cert/schoolhub.key"},
-   {cacertfile, "priv/cert/schoolhub_cacert.crt"},
-   {verify, verify_peer}]},
+   {verify, verify_none}]},
  {client,
   [{certfile, "priv/cert/schoolhub.crt"},
    {keyfile, "priv/cert/schoolhub.key"},
-   {cacertfile, "priv/cert/schoolhub_cacert.crt"},
-   {verify, verify_peer}]}].
+   {verify, verify_none}]}].
