--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -4,9 +4,9 @@ global
 defaults
     mode http
     balance source
-    timeout connect 5000ms
-    timeout client 5000ms
-    timeout server 5000ms
+    timeout connect 5s
+    timeout client 24h
+    timeout server 60m
 
 frontend http-in
     bind *:8080 ssl crt /etc/cert/schoolhub.pem
@@ -16,3 +16,13 @@ backend servers
     server server1 10.3.1.1:8080 ssl ca-file /etc/cert/schoolhub_cacert.pem
     server server2 10.3.1.2:8080 ssl ca-file /etc/cert/schoolhub_cacert.pem
     server server3 10.3.1.3:8080 ssl ca-file /etc/cert/schoolhub_cacert.pem
+
+frontend xmpp-in
+    mode tcp
+    bind *:5222 ssl crt /etc/cert/schoolhub.pem
+    default_backend mongooseim
+
+backend mongooseim
+    mode tcp
+    option independent-streams
+    server mongooseim1 10.3.2.1:5222
