--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -93,7 +93,8 @@
 %% You can define one or several, for example:
 %% {hosts, ["example.net", "example.com", "example.org"]}.
 %%
-{hosts, ["localhost", "10.3.2.2", "schoolhub"] }.
+{hosts, ["localhost", "schoolhub", "10.3.2.1", "10.3.2.2", 
+	 "mongooseim-1", "mongooseim-2"] }.
 
 %%
 %% route_subdomains: Delegate subdomains to other XMPP servers.
@@ -225,7 +226,7 @@
 			%% certificate, specify the full path to the
 			%% file and uncomment this line:
 			%%
-                        {certfile, "priv/ssl/schoolhub.pem"}, starttls,
+                        %{certfile, "priv/ssl/schoolhub.pem"}, starttls,
                         
                         %%{zlib, 10000},
 			%% https://www.openssl.org/docs/apps/ciphers.html#CIPHER_STRINGS
