fix multi servers regger auth issue

--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -351,7 +351,7 @@
 {auth_opts, [
              %% Store the plain passwords or hashed for SCRAM:
              %% {password_format, plain} % default
-             {password_format, scram},
+             {password_format, scram}
              
              %% {scram_iterations, 4096} % default
              
@@ -371,7 +371,7 @@
              %%
              %% For cyrsasl_external
              %% {authenticate_with_cn, false}
-             {cyrsasl_external, standard}
+             %{cyrsasl_external, standard}
              %%
              %% For auth_ldap
              %% {ldap_base, "dc=example,dc=com"},
