--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -233,7 +233,8 @@
 			%% {ciphers, "TLSv1.2:TLSv1.3"},
 			{access, c2s},
 			{shaper, c2s_shaper},
-			{max_stanza_size, 65536}
+			{max_stanza_size, 65536},
+			{proxy_protocol, true}
                         
 		       ]},
 
