adding haproxy metrics

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -26,3 +26,10 @@ backend mongooseim
     mode tcp
     option independent-streams
     server mongooseim1 10.3.2.1:5222
+
+frontend stats
+    bind *:8404
+    stats enable
+    stats uri /stats
+    stats refresh 10s
+    stats admin if LOCALHOST
