--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -93,8 +93,7 @@
 %% You can define one or several, for example:
 %% {hosts, ["example.net", "example.com", "example.org"]}.
 %%
-{hosts, ["localhost", "schoolhub", "10.3.2.1", "10.3.2.2", 
-	 "mongooseim-1", "mongooseim-2"] }.
+{hosts, ["localhost", "schoolhub", "mongooseim", "10.3.2.1", "10.3.2.2"] }.
 
 %%
 %% route_subdomains: Delegate subdomains to other XMPP servers.
