--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -25,7 +25,8 @@ frontend xmpp-in
 backend mongooseim
     mode tcp
     option independent-streams
-    server mongooseim1 10.3.2.1:5222
+    server mongooseim1 10.3.2.1:5222 check
+    server mongooseim2 10.3.2.2:5222 check
 
 frontend stats
     bind *:8404
