adding mongoose postgres and docker-compose to phoenix version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     restart: always
     shm_size: 256M
     volumes:
-      - ./postgres/schema:/docker-entrypoint-initdb.d
+      - ./postgres/schema/pg.sql:/docker-entrypoint-initdb.d/pg.sql
       - ./ssl/schoolhub.crt:/var/lib/postgresql/schoolhub.crt
       - ./ssl/schoolhub.key:/var/lib/postgresql/schoolhub.key
     environment:
@@ -74,122 +74,6 @@ services:
       - ./haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
       - ./ssl/schoolhub.pem:/etc/cert/schoolhub.pem
       - ./ssl/schoolhub_cacert.crt:/etc/cert/schoolhub_cacert.pem
-
-
-  schoolhub_server1:
-    container_name: schoolhub_server1
-    image: elixir
-    build:
-      context: ./schoolhub_server
-    hostname: schoolhub
-    expose:
-      - "8080"
-    networks:
-      schoolhub_network:
-        ipv4_address: 10.3.1.1
-    restart: always
-    depends_on:
-      - postgres
-    tty: true
-    volumes:
-      - ./schoolhub_server:/root/schoolhub_server
-    env_file:
-      - secret.env
-    environment:
-      - SSL_DIST_OPTFILE=priv/ssl_dist_optfile.conf
-      - NAME=server@10.3.1.1
-    working_dir: /root/schoolhub_server
-    command: ./launch.sh
-
-  schoolhub_server2:
-    container_name: schoolhub_server2
-    image: elixir
-    build:
-      context: ./schoolhub_server
-    hostname: schoolhub
-    expose:
-      - "8080"
-    networks:
-      schoolhub_network:
-        ipv4_address: 10.3.1.2
-    restart: always
-    depends_on:
-      - postgres
-    tty: true
-    volumes:
-      - ./schoolhub_server:/root/schoolhub_server
-    env_file:
-      - secret.env
-    environment:
-      - SSL_DIST_OPTFILE=priv/ssl_dist_optfile.conf
-      - NAME=server@10.3.1.2
-    working_dir: /root/schoolhub_server
-    command: ./launch.sh
-
-  schoolhub_server3:
-    container_name: schoolhub_server3
-    image: elixir
-    build:
-      context: ./schoolhub_server
-    hostname: schoolhub
-    expose:
-      - "8080"
-    networks:
-      schoolhub_network:
-        ipv4_address: 10.3.1.3
-    restart: always
-    depends_on:
-      - postgres
-    tty: true
-    volumes:
-      - ./schoolhub_server:/root/schoolhub_server
-    env_file:
-      - secret.env
-    environment:
-      - SSL_DIST_OPTFILE=priv/ssl_dist_optfile.conf
-      - NAME=server@10.3.1.3
-    working_dir: /root/schoolhub_server
-    command: ./launch.sh
-    
-
-  dist_tester_server:
-    container_name: schoolhub_test_server
-    image: elixir
-    build:
-      context: ./test
-    hostname: schoolhub
-    networks:
-      schoolhub_network:
-        ipv4_address: 10.3.0.9
-    restart: always
-    tty: true
-    volumes:
-      - ./schoolhub_server:/root/schoolhub_server
-      - ./schoolhub_client:/root/schoolhub_client
-      - ./test:/root/test
-    environment:
-      - ERLANG_COOKIE=test_cookie
-    entrypoint: /root/test/dist_server_entrypoint.sh
-
-    
-  dist_tester_client:
-    container_name: schoolhub_test_client
-    image: elixir
-    build:
-      context: ./test
-    hostname: schoolhub_client
-    networks:
-      schoolhub_network:
-        ipv4_address: 10.3.0.10
-    restart: always
-    tty: true
-    volumes:
-      - ./schoolhub_client:/root/schoolhub_client
-      - ./test:/root/test
-    environment:
-      - ERLANG_COOKIE=test_cookie
-      - NODES_AMOUNT=5
-    entrypoint: /root/test/dist_client_entrypoint.sh
       
     
 networks:
