adding phoenix to haproxy, without ssh for now

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -8,6 +8,13 @@ defaults
     timeout client 24h
     timeout server 60m
 
+frontend phoenix-in
+    bind *:4000
+    default_backend phoenix
+
+backend phoenix
+    server phoenix_server 10.0.2.15:4000
+
 frontend http-in
     bind *:8080 ssl crt /etc/cert/schoolhub.pem
     default_backend servers
