--- a/schoolhub/assets/package.json
+++ b/schoolhub/assets/package.json
@@ -20,7 +20,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "sasl-scram-sha-1": "^1.2.1",
+    "sasl-scram-sha-1": "git://github.com/muszbek/js-sasl-scram-sha-1",
     "saslmechanisms": "^0.1.1",
     "sass-loader": "^8.0.2",
     "terser-webpack-plugin": "^2.3.2",
