chat works now, admin creds still hard coded

--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -225,7 +225,7 @@
 			%% certificate, specify the full path to the
 			%% file and uncomment this line:
 			%%
-                        %{certfile, "priv/ssl/schoolhub.pem"}, starttls,
+                        {certfile, "priv/ssl/schoolhub.pem"}, starttls,
                         
                         %%{zlib, 10000},
 			%% https://www.openssl.org/docs/apps/ciphers.html#CIPHER_STRINGS
@@ -233,7 +233,7 @@
 			{access, c2s},
 			{shaper, c2s_shaper},
 			{max_stanza_size, 65536},
-			{proxy_protocol, true}
+			{proxy_protocol, false}
                         
 		       ]},
 
@@ -523,7 +523,7 @@
 %% You can put here as many accounts as you want.
 %%
 %{acl, admin, {user, "alice", "localhost"}}.
-{acl, admin, {user, "admin", "localhost"}}.
+{acl, admin, {user, "admin", "10.3.2.1"}}.
 
 %%
 %% Blocked users
