xmpp javascript client now works with proxy

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -15,6 +15,13 @@ frontend phoenix-in
 backend phoenix
     server phoenix_server 10.0.2.15:4000
 
+frontend phoenix-in_ssl
+    bind *:4001 ssl crt /etc/cert/schoolhub.pem
+    default_backend phoenix_ssl
+
+backend phoenix_ssl
+    server phoenix_server 10.0.2.15:4001 check
+
 frontend http-in
     bind *:8080 ssl crt /etc/cert/schoolhub.pem
     default_backend servers
@@ -32,8 +39,19 @@ frontend xmpp-in
 backend mongooseim
     mode tcp
     option independent-streams
-    server mongooseim1 10.3.2.1:5222 check
-    server mongooseim2 10.3.2.2:5222 check
+    server mongooseim1 10.3.2.1:5222 check send-proxy
+    server mongooseim2 10.3.2.2:5222 check send-proxy
+
+frontend xmpp-bosh-in
+    mode tcp
+    bind *:5280
+    default_backend mongooseim-bosh
+
+backend mongooseim-bosh
+   mode tcp
+   option independent-streams
+   server mongooseim1 10.3.2.1:5280
+   server mongooseim2 10.3.2.2:5280
 
 frontend stats
     bind *:8404
