--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -93,7 +93,7 @@
 %% You can define one or several, for example:
 %% {hosts, ["example.net", "example.com", "example.org"]}.
 %%
-{hosts, ["localhost", "schoolhub", "mongooseim", "10.3.2.1", "10.3.2.2"] }.
+{hosts, ["localhost", "schoolhub", "mongooseim", "10.3.0.4", "10.3.2.1", "10.3.2.2"] }.
 
 %%
 %% route_subdomains: Delegate subdomains to other XMPP servers.
@@ -233,7 +233,7 @@
 			{access, c2s},
 			{shaper, c2s_shaper},
 			{max_stanza_size, 65536},
-			{proxy_protocol, false}
+			{proxy_protocol, true}
                         
 		       ]},
 
