--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -10,26 +10,15 @@ defaults
 
 frontend phoenix-in
     bind *:4000
+    bind *:4001 ssl crt /etc/cert/schoolhub.pem
     default_backend phoenix
 
 backend phoenix
     server phoenix_server 10.0.2.15:4000
 
-frontend phoenix-in_ssl
-    bind *:4001 ssl crt /etc/cert/schoolhub.pem
-    default_backend phoenix_ssl
-
 backend phoenix_ssl
-    server phoenix_server 10.0.2.15:4001 check
-
-frontend http-in
-    bind *:8080 ssl crt /etc/cert/schoolhub.pem
-    default_backend servers
-
-backend servers
-    server server1 10.3.1.1:8080 ssl ca-file /etc/cert/schoolhub_cacert.pem
-    server server2 10.3.1.2:8080 ssl ca-file /etc/cert/schoolhub_cacert.pem
-    server server3 10.3.1.3:8080 ssl ca-file /etc/cert/schoolhub_cacert.pem
+    server phoenix_server 10.0.2.15:4001 ssl ca-file /etc/cert/schoolhub_cacert.pem
+    
 
 frontend xmpp-in
     mode tcp
@@ -39,8 +28,8 @@ frontend xmpp-in
 backend mongooseim
     mode tcp
     option independent-streams
-    server mongooseim1 10.3.2.1:5222 check send-proxy
-    server mongooseim2 10.3.2.2:5222 check send-proxy
+    server mongooseim1 10.3.2.1:5222 check send-proxy ssl ca-file /etc/cert/schoolhub_cacert.pem
+    server mongooseim2 10.3.2.2:5222 check send-proxy ssl ca-file /etc/cert/schoolhub_cacert.pem
 
 frontend xmpp-bosh-in
     mode tcp
@@ -52,6 +41,18 @@ backend mongooseim-bosh
    option independent-streams
    server mongooseim1 10.3.2.1:5280
    server mongooseim2 10.3.2.2:5280
+
+frontend xmpp-bosh-in_ssl
+    mode tcp
+    bind *:5285 ssl crt /etc/cert/schoolhub.pem
+    default_backend mongooseim-bosh_ssl
+
+backend mongooseim-bosh_ssl
+    mode tcp
+    option independent-streams
+    server mongooseim1 10.3.2.1:5285 check ssl ca-file /etc/cert/schoolhub_cacert.pem
+    server mongooseim2 10.3.2.2:5285 check ssl ca-file /etc/cert/schoolhub_cacert.pem
+
 
 frontend stats
     bind *:8404
