add token mod to mongooseim

--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -709,6 +709,14 @@
 %   ]}
 % ]},
 
+  {mod_auth_token, [
+		    % default:
+		    % {{validity_period, access}, {1, hours}},
+		    % {{validity_period, refresh}, {25, days}}
+		   ]},
+  {mod_keystore, [{keys, [{access_secret, ram},
+			  {refresh_secret, ram}]}]},
+
   {mod_adhoc, []},
   {mod_inbox, []},
 
