fix mongooseim version

--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -863,6 +863,7 @@
   {mod_mam_meta, [
     {backend, rdbms},
     {pm, [
+      {archive_groupchats, false},
       {user_prefs_store, mnesia}
     ]}
   ]}
