--- a/schoolhub/assets/package.json
+++ b/schoolhub/assets/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@xmpp/client": "^0.11.1",
+    "@xmpp/debug": "^0.11.0",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
@@ -20,6 +22,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "regenerator-runtime": "^0.13.7",
     "sasl-scram-sha-1": "git://github.com/muszbek/js-sasl-scram-sha-1",
     "saslmechanisms": "^0.1.1",
     "sass-loader": "^8.0.2",
