get auth tokens from mongooseim

--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -715,7 +715,8 @@
 		    % {{validity_period, access}, {1, hours}},
 		    % {{validity_period, refresh}, {25, days}}
 		   ]},
-  {mod_keystore, [{keys, [{access_secret, ram},
+  {mod_keystore, [{keys, [{token_secret, ram},
+			  {access_secret, ram},
 			  {refresh_secret, ram}]}]},
 
   {mod_adhoc, []},
