--- a/mongooseim/member/mongooseim.cfg
+++ b/mongooseim/member/mongooseim.cfg
@@ -340,7 +340,7 @@
 
 %% Advertised SASL mechanisms
 %%{sasl_mechanisms, [cyrsasl_scram, cyrsasl_plain]}.
-{sasl_mechanisms, [cyrsasl_scram_sha512_plus, cyrsasl_scram_sha512, cyrsasl_scram_sha256_plus, cyrsasl_scram_sha256, cyrsasl_scram_sha224_plus, cyrsasl_scram_sha224, cyrsasl_scram_sha1_plus, cyrsasl_scram_sha1]}.
+{sasl_mechanisms, [cyrsasl_scram_sha512_plus, cyrsasl_scram_sha512, cyrsasl_scram_sha256_plus, cyrsasl_scram_sha256, cyrsasl_scram_sha224_plus, cyrsasl_scram_sha224, cyrsasl_scram_sha1_plus, cyrsasl_scram_sha1, cyrsasl_oauth]}.
 
 %%
 %% auth_method: Method used to authenticate the users.
