--- a/schoolhub/Dockerfile
+++ b/schoolhub/Dockerfile
@@ -1,7 +1,7 @@
 FROM bitwalker/alpine-elixir-phoenix:latest AS phx-builder
 
-EXPOSE 4000
-EXPOSE 4001
+RUN apk update && \
+    apk --no-cache --update add postgresql-client
 
 COPY . /opt/app
 
@@ -9,3 +9,8 @@ RUN mix do deps.get, deps.compile
 
 RUN cd assets && \
     npm install
+
+# RUN cd assets/ && \
+#    npm run deploy
+#    cd - && \
+#    mix do compile, phx.digest
