--- a/schoolhub/Dockerfile
+++ b/schoolhub/Dockerfile
@@ -5,14 +5,15 @@ RUN apk update && \
 
 COPY . /opt/app
 
-RUN mix do deps.get, deps.compile
+RUN mix deps.get && \
+    MIX_ENV=prod mix deps.compile
 
 RUN cd assets && \
     npm install
 
-# RUN cd assets/ && \
-#    npm run deploy
-#    cd - && \
-#    mix do compile, phx.digest
+RUN cd assets/ && \
+    npm run deploy && \
+    cd - && \
+    mix do compile, phx.digest
 
 CMD ["/opt/app/entrypoint.sh"]
