--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -9,12 +9,15 @@ defaults
     timeout server 60m
 
 frontend phoenix-in
-    bind *:4000
-    bind *:4001 ssl crt /etc/cert/schoolhub.pem
+    bind *:80
     default_backend phoenix
 
 backend phoenix
     server phoenix_server 10.3.0.5:4000
+
+frontend phoenix-in_ssl
+    bind *:443 ssl crt /etc/cert/schoolhub.pem
+    default_backend phoenix_ssl
 
 backend phoenix_ssl
     server phoenix_server 10.3.0.5:4001 ssl ca-file /etc/cert/schoolhub_cacert.pem
