--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -1,6 +1,15 @@
 global
     maxconn 256
 
+    # chroot /jail
+    lua-load /etc/haproxy/acme-http01-webroot.lua
+    ssl-default-bind-ciphers AES256+EECDH:AES256+EDH:!aNULL;
+    tune.ssl.default-dh-param 4096
+
+# DNS runt-time resolution on backend hosts
+resolvers docker
+    nameserver dns "127.0.0.11:53"
+
 defaults
     mode http
     balance source
@@ -8,24 +17,32 @@ defaults
     timeout client 24h
     timeout server 60m
 
-frontend phoenix-in
+    # never fail on address resolution
+    default-server init-addr last,libc,none
+    
+
+frontend http
     bind *:80
+    mode http
+    acl url_acme_http01 path_beg /.well-known/acme-challenge/
+    http-request use-service lua.acme-http01 if METH_GET url_acme_http01
+    redirect scheme https code 301 if !{ ssl_fc }
+
+frontend https
+    bind *:443 ssl crt /etc/haproxy/certs/ no-sslv3 no-tls-tickets no-tlsv10 no-tlsv11
+    http-response set-header Strict-Transport-Security "max-age=16000000; includeSubDomains; preload;"
     default_backend phoenix
 
 backend phoenix
-    server phoenix_server 10.3.0.5:4000
-
-frontend phoenix-in_ssl
-    bind *:443 ssl crt /etc/cert/schoolhub.pem
-    default_backend phoenix_ssl
-
+    server phoenix_server 10.3.0.5:4000 resolvers docker resolve-prefet ipv4
+    
 backend phoenix_ssl
-    server phoenix_server 10.3.0.5:4001 ssl ca-file /etc/cert/schoolhub_cacert.pem
+    server phoenix_server 10.3.0.5:4001 ssl ca-file /etc/letsencrypt/live/schoolhub.com/chain.pem
     
 
 frontend xmpp-in
     mode tcp
-    bind *:5222 ssl crt /etc/cert/schoolhub.pem
+    bind *:5222 ssl crt /etc/haproxy/certs/ no-sslv3 no-tls-tickets no-tlsv10 no-tlsv11
     default_backend mongooseim
 
 backend mongooseim
@@ -47,14 +64,14 @@ backend mongooseim-bosh
 
 frontend xmpp-bosh-in_ssl
     mode tcp
-    bind *:5285 ssl crt /etc/cert/schoolhub.pem
+    bind *:5285 ssl crt /etc/haproxy/certs/ no-sslv3 no-tls-tickets no-tlsv10 no-tlsv11
     default_backend mongooseim-bosh_ssl
 
 backend mongooseim-bosh_ssl
     mode tcp
     option independent-streams
-    server mongooseim1 10.3.2.1:5285 check ssl ca-file /etc/cert/schoolhub_cacert.pem
-    server mongooseim2 10.3.2.2:5285 check ssl ca-file /etc/cert/schoolhub_cacert.pem
+    server mongooseim1 10.3.2.1:5285 check ssl ca-file /etc/letsencrypt/live/schoolhub.com/chain.pem
+    server mongooseim2 10.3.2.2:5285 check ssl ca-file /etc/letsencrypt/live/schoolhub.com/chain.pem
 
 
 frontend stats
